src/test/ui/error-codes/E0530.stderr
error[E0530]: match bindings cannot shadow statics
  --> $DIR/E0530.rs:16:9
   |
12 |     static TEST: i32 = 0;
   |     --------------------- a static `TEST` is defined here
...
16 |         TEST => {} //~ ERROR E0530
   |         ^^^^ cannot be named the same as a static

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0530"
